# MAFFTpy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .setup.py  CMakeLists.txt  MANIFEST.in  README.md  launcher.py  launcher.spec  packages.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  test.yml
examples/: brygoo.fas
scripts/: mafftpy.py  mafftpy.spec
scripts/mac/: build.sh  config.sh
scripts/mac/data/: mafftpy.icns
src/itaxotools/__pyinstaller/: hook-itaxotools.mafftpy.gui.py
src/itaxotools/common/: __init__.py  io.py  machine.py  threads.py  utility.py  widgets.py
src/itaxotools/common/param/: __init__.py  core.py  model.py  view.py
src/itaxotools/common/resources/: __init__.py
src/itaxotools/common/widgets/: __init__.py  dialogs.py  graphics.py  layouts.py  widgets.py
src/itaxotools/mafftpy/: __init__.py  __main__.py  core.py  params.py  run.py
src/itaxotools/mafftpy/gui/: __init__.py  main.py
src/itaxotools/mafftpy/param/: core.py
src/mafft/: changes  changes.md  readme
src/mafft-7.525-original/: README.md  license  readme.bk
src/mafft-7.525-original/MPI/: Makefile  mltaln9_mpi.c  nodepair_mpi.c  pairlocalalign_mpi.c
src/mafft-7.525-original/core/: DNA.h  Dalignmm.c  Falign.c  Falign_localhom.c  Galign11.c  JTT.c  Lalign11.c  Lalignmm.c  MSalign11.c  MSalignmm.c  Makefile  Makefile.sos  SAalignmm.c  Salignmm.c  addfunctions.c  addsingle.c  blosum.c  blosum.h  constants.c  contrafoldwrap.c  countlen.c  defs.c  disttbfast.c  dndblast.c  dndfast4.c  dndfast7.c  dndpre.c  dndpre_score.c  dp.h  dvtditr.c  f2cl.c  fft.h  fftFunctions.c  filter.c  functions.h  genalign11.c  getlag.c  hex2maffttext.c  interface.c  io.c  (+41 more)
src/mafft-7.525-original/test/: samplerna  samplerna.qinsi  samplerna.xinsi
src/mafft/core/: Makefile  constants.c  disttbfast.c  dp.h  dvtditr.c  fft.h  io.c  mafft.tmpl  mafftmodule.c  mafftmodule.h  makedirectionlist.c  mltaln.h  mtxutl.c  pairlocalalign.c  setdirection.c  tbfast.c  wrapio.c  wrapio.h
src/mafftpy/: __init__.py  core.py  params.py  run.py  utility.py
src/mafftpy/param/: qt.py
tests/: test_mafft.py
tests/sample1/: sample.fftns1
tests/sample2/: s  sample  sample.fftns1  sample.fftns1.adjustdirectionaccurately  sample.ginsi  sample.ginsi_adjustdirection
tests/sample3/: sample  sample.fftns1  sample.ginsi  sample.ginsi_adjustdirection  sample.ginsi_adjustdirectionaccurately
tests/sample4/: sample  sample.fftns1  sample.ginsi  sample.ginsi.adjustdirectionaccurately
tools/: fuse-wheels.py
