[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "itaxotools-mafftpy"
dynamic = ["version"]
description = "A Python wrapper for MAFFT"
authors = [
    { name = "Patmanidis Stefanos", email = "stefanpatman91@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyside6>=6.1.1",
    "itaxotools-common>=0.3.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyinstaller",
    "setuptools-scm",
    "cibuildwheel",
    "delocate",

]

[project.scripts]
mafftpy = "itaxotools.mafftpy.run:main"
mafftpy-ginsi = "itaxotools.mafftpy.run:ginsi"
mafftpy-fftns1 = "itaxotools.mafftpy.run:fftns1"
mafftpy-gui = "itaxotools.mafftpy.gui:run"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["src/itaxotools"]

[tool.setuptools_scm]
