[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "itaxotools-mafftpy"
dynamic = ["version"]
description = "A Python wrapper for MAFFT"
authors = [
    { name = "Patmanidis Stefanos", email = "stefanpatman91@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
readme = "README.md"
requires-python = ">=3.10.2, <4"
dependencies = [
    "itaxotools-common>=0.3.3"
]

[project.optional-dependencies]
gui = [
    "pyside6>=6.1.1",
]
dev = [
    "setuptools-scm",
    "cibuildwheel",
    "delocate",
    "pre-commit",
    "ruff",
    "pytest",
    "pyinstaller",
]

[project.scripts]
mafftpy = "itaxotools.mafftpy.run:main"
mafftpy-ginsi = "itaxotools.mafftpy.run:ginsi"
mafftpy-fftns1 = "itaxotools.mafftpy.run:fftns1"
mafftpy-gui = "itaxotools.mafftpy.gui:run"

[project.urls]
Homepage = "https://itaxotools.org/"
Source = "https://github.com/iTaxoTools/MAFFTpy"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["src/itaxotools"]

[tool.setuptools_scm]

[tool.ruff]
ignore-init-module-imports = true
extend-select = ["I"]
exclude = [
    "src/mafft*",
]

[tool.ruff.lint.isort]
known-first-party = ["itaxotools"]
section-order = [
    "future",
    "pyqt",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
pyqt = ["PySide6"]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
